# Text-Analyzer-App

./: README.md  main.py  pyproject.toml  requirements.txt
