[project]
name = "text-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.18.0",
    "langdetect>=1.0.9",
    "rake-nltk>=1.0.6",
    "streamlit>=1.43.1",
    "textblob>=0.19.0",
    "textstat>=0.7.5",
]
